--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -3,7 +3,8 @@
   <div class="splash-info">
     <div class="splash-logo"></div>
     <div class="splash-intro">
-      {{ 'WELCOME_INTRO' | translate }}
+      <!--{{ 'WELCOME_INTRO' | translate }}-->
+      Agende equipamentos por aqui e se preocupe somente com a diversão ; )
     </div>
   </div>
   <div padding>
