--- a/src/pages/rol-detail/rollerblade-detail.html
+++ b/src/pages/rol-detail/rollerblade-detail.html
@@ -16,5 +16,8 @@
     <p>Tamanho: {{rol.size}}</p>
     <p>Marca: {{rol.brand}}</p>
     <p>Cod: {{rol.cod}}</p>
+    <button ion-button>Reservar</button>
   </div>
+
+
 </ion-content>
